app/less/archetype.less
.archetypeEditor fieldset{
    border: 1px solid #666;
    padding: 5px;
    margin-bottom: 5px;
    background-color: #fff;
    clear: both;
}

.archetypeEditor label{
    width: 75px;
    float: left;
}

.archetypeEditor fieldset>label{
    float: left;
    width: 200px;
    padding-left: 0;
}

.archetypeEditor .multiPropertyTextbox{
    margin-bottom: 3px;
}

.archetypeEditor ul{
    list-style: none;
}

.archetypeEditor .archetypeEditorControls{
    float: right;
}

.archetypeEditor .archetypeProperty{
    clear: both;
    overflow: hidden;
}

.archetypeEditor .umb-contentpicker{
    margin-left: 60px;
    padding-left: 25px;
}

.archetypeEditor .archetypeDeveloperModel
{
    width: 98%;
    min-height: 100px;
    margin-bottom: 10px;
    border: 1px solid red;
}

.archetypeEditor .archetypeFieldsetToolbar {
    margin-bottom: 10px;
    overflow: hidden;
}

.archetypeEditor .archetypeFieldsetToolbar li {
    float: left;
    padding: 2px 4px;
    margin-right: 10px;
    border: 1px solid #ddd;
    cursor: pointer;
}

.archetypeEditor .archetypeFieldsetHeaderText{
    clear:both;
    margin-bottom: 3px;
    font-size: 12px;
}

.archetypeEditor .archetypeFieldsetFooterText{
    clear:both;
    margin-bottom: 3px;
    font-size: 12px;
}

.archetypeEditor .archetypeFieldsetHelpText{
    clear:both;
    margin-bottom: 3px;
    font-size: 12px;
}

.archetypeConfig {
 
}

.archetypeConfig ul{
    list-style: none;
}

.archetypeConfig .archetypeEditorControls{
    float: right;
}

.archetypeConfig li{
    background-color: #fff;
}

.archetypeConfig label{
    width: 100px;
}

.archetypeConfig .archetypeFieldsetWrapper{
    border: 1px solid #ccc;
    padding: 10px 5px;
    margin-bottom: 10px;
}

.archetypeConfig .archetypeDeveloperModel {
    width: 98%;
    height: 100px;
}

.archetypeConfig .archetypePropertiesWrapper{
    border: 1px solid #ddd;
    padding: 10px;
    margin: 10px;
    margin-left: 50px;
    width: 60%;
}

.archetypeConfig .archetypePropertiesWrapper ul{
    padding: 0;
    margin: 0;
}

.archetypeConfig .archetypePropertiesWrapper li{
    padding: 10px;
    margin-bottom: 10px;
    background-color: #eee;
}

.archetypeConfig .archetypePropertiesWrapper li:last-child{
    margin-bottom: 0;
}

.archetypeConfig .archetypeFieldsetTitle {
    overflow: hidden;
}

.archetypeConfig .arechetypeCollapser{
    margin-top: 10px;
}

